--- a/writings/hoge.tex
+++ b/writings/hoge.tex
@@ -39,14 +39,14 @@
 　以下では議会研究の知見を援用しつつ、政策に対する注目がいかなる条件のもとで形成されうるのか検討する。\\
 
 \subsection{議会における政策の「注目」}
-　アメリカ議会研究において、「法案が重要な関心をもたれる」という現象は議会内政党の役割を軸に議論が蓄積されてきた。ひとつの極にある議論はアメリカ議会に政党は存在しないとする立場であり、\citet*{Krehbiel2010-ob}の提唱したPivotal Politics論がその典型である。もうひとつの極には議会における政党指導部の役割を強調する議論が存在し、条件付き政党政府論(Conditional Party Government)\citep*{Rohde1991-da, Aldrich1995-xf}やカルテル政党論(Cartel Party Theory)\citep*{Cox2005-pn,Cox2007-xq}などの議論が存在している。\\
+　アメリカ議会研究において、「法案が重要な関心をもたれる」という現象は議会内政党の役割を軸に議論が蓄積されてきた。ひとつの極にある議論はアメリカ議会に政党は存在しないとする立場であり、\citet*{Krehbiel2010-ob}の提唱したPivotal Politics論がその典型である。もうひとつの極には議会における政党指導部の役割を強調する議論が存在し、条件付き政党政府論(Conditional Party Government)\citep*{Rohde1991-da, Aldrich1995-xf}やカルテル政党論(Cartel Party Theory)\citep*{Cox2005-pn,Cox2007-xq}などの議論が存在してΩいる。\\
 　議会における政党の役割を重視しないPivotal Politics論では、議会における議決行動に着目し、審議の膠着状況(gridlock)が常にではないが恒常的に生じる現象と議決における過大連合の形成を拒否権と議事妨害(filibuster)とへの対抗に必要な議席数の幅から説明する。\citep*{Krehbiel2010-ob}\\
 　条件付き政党政府論は議会における政党の役割を、多数党の政党指導部が自らの政党の指示を得ている場合に、法案審議を推し進める権限を行使していると論じる。\\
 　カルテル政党論は、多数党の政党指導部が議会の議事手続きを管理することを通じて、議場で審議される内容を管理し、多数党の多数派が望まない法案が審議の俎上に上がることを防ぐ消極的なアジェンダ・コントロール権能(negative agenda control)を有していると指摘する。\citep*{Cox2005-pn}\\
 　このような政党の存在をめぐる理論的議論に対して、数多くの研究が経験的な知見により実証を試みてきた。分析結果については必ずしも一貫した結論が出ているとは言い難い\footnote{この点に関する経験的知見としては}ものの、特に近年の分極化した議会において政党指導部が議事手続きを通じて議会で論じられる政策争点をコントロールしていることは事実であろう。\citep*{Sinclair1997-jm, Sinclair2016-kh,Rosenthal2008-xb, Peters2010-ve}\\
 
 \section*{Theory}
-　では、議会において特定の法案が重要視されるためには、いかなる条件が必要だろうか。第一に、議会研究の文脈では法案は議会指導部によって多数派政党に都合の良い形でスクリーニングされると考えられてきた。
+　本稿は、制度ごとの意思決定手続きにおける差異が、政策変化を説明する上で重要であると考える。この制度間差異は、政策変化の中でも注目が形成される容態に対して影響を与えると考えられる。
 　
 
 \section*{Hypothesis}
