--- a/writings/hoge.tex
+++ b/writings/hoge.tex
@@ -15,7 +15,27 @@
 \maketitle
 
 \section{Introduction}
-　既存の政策が変化する要因をめぐっては多くの議論がなされてきた。\\
+　アメリカの議会はしばしば「世界最強」の議会\citep*{2004-cr}と言われ、憲法上立法を担う集団として多くの分析が蓄積されてきた。連邦議会はアメリカ政治において最も重要なアクターのひとつであり、その決定は政治的・社会的に大きな意味を持つ。\\
+　しかしながら、近年アメリカ議会は分極化の影響を受け、その機能を十分に発揮していないとする議論も存在する。民主党と共和党が鋭く対立し、議会における法案審議が停滞するといった手詰まりの状態(gridlock)が問題視され、議会が十分に立法機能を果たすことが困難になっているとも指摘される\footnote{議会審議が行き詰まることによって、重要な法案の審議が進まない「立法生産性」の低下がもたらされているかについては議論の余地がある。\citep*{}しかしながら、議会において法案審議がかつてのように議案ごとに審議と票読みを行い、多数派形成を都度行うといった法案審議・議決過程が行われなくなり、より固定的な投票行動が観察されるようになってきていることは事実である。\citep*{Poole2017-ir,Layman2006-tg}}。\\
+　こうした状態で、アメリカ議会はどのようにしてアメリカ社会を代表していると言えるのだろうか。ひとつの事例として銃規制問題が挙げられる。銃の所持は現在のアメリカにおいて憲法典によって認められた権利として位置付けられており、連邦政府が直接のその所有や管理を規制もしくは禁止することは非常に困難になっている。他方で、度重なる銃乱射事件はアメリカ社会における銃の位置付けを問い直しており、Pew Research Centerによる調査では、2019年の時点で60\%の有権者がより厳しい銃規制を支持している\footnote{この比率は年々増加しており、2017年には52\%、2018年には57\%の有権者がより厳しい銃規制を望んでいる。}。\citep*{Schaeffer2019-ld}\\
+　このように社会的支持が変化する一方で、議会は銃規制を実行的に前に進めることに成功していない。議会民主党は複数回にわたって銃規制法案を提出し、審議を進めようと試みているが、特に上院でのフィリバスターなどを経て十分な立法成果を挙げることに成功していない。少なくともアメリカにおいて世論が一定の関心を持ち、かつ比較的明瞭に有権者一般の選好が観察されるような政策領域においても、それが必ずしも立法成果につながるわけではない。
+　ではなぜ、世論が関心を持つ法案であっても、議会において十分な審議や立法成果に繋がらないという現象が生じるのだろうか。これに対する重要な解答は、議会が必ずしも世論に直接反応して立法活動に携わっているわけではないことに由来する。以下では、議会研究を中心とした研究成果を概観しながら、議会と有権者を含む公共空間とがいかに連結し、分断されているのかを検討した上で、本論の問題設定を提示する。
+
+\subsection{議会はどこを向いて立法しているのか}
+\subsubsection{再選動機}
+　議会の立法活動について、古典的には議員の再選動機から議会行動を説明するという枠組みが提示されてきた。\citep*{Mayhew1974-jz}\\
+　こうした再選を求める議員による試みとして議員行動を説明する枠組みにおいて、有権者の意向とは別に、利益団体の重要性を考慮する議論も存在する。\\
+
+\subsubsection{議員配置}
+　議会における意思決定の幅を議員の配置図から考察する議論も存在する。\citep*{Krehbiel2010-ob,Tsebelis2009-hf}
+\subsubsection{議会内政党}
+　議員の構図を重視するKrehbielらの議論に対して、議会内政党が議会の法案審議や議決に関して重要な役割を果たしてきたとする議論も存在する。\citep*{Cox2005-pn,Cox2007-xq,Rohde1991-da,Aldrich1995-xf}\\
+\subsection{議員行動と政党の役割}
+　特に近年の議会における審議過程をめぐる議論は、議会内政党がいかなる役割を果たしているのかに着目して検討がなされてきた。中でも議会内政党の役割については手続き上多数党が優位に立っている点が注目され、議案審議過程を多数政党が統制しているとする理解が提示されてきた。\citep*{Cox2005-pn,Cox2007-xq}\\
+　これに対して、少数政党の役割を強調する議論が近年提示されている。\citep*{Hughes2018-dj,Hughes2021-cp,Ballard2021-su}\\
+　少数政党の議会審議における重要性を指摘する一連の研究は、議会で何が審議され、どのような法案が通過するかを説明する上で極めて重要な示唆を与えている。他方、議会内政党に注目する分析は、議会内部の権限配置や資源の多寡に焦点を据える傾向にあり、それ以外の要因を分析の視角に捉えきれていないといえる。特に議員が再選動機を持つアクターであり、議員は法案審議や点呼投票などの場面において自身のみで意思決定を行うことのできるアクターではないという点は重要である。
+
+
 　JonesとBaumgartnerによる一連の分析\citep*{Baumgartner2010-rl, Baumgartner2009-eb,Baumgartner2020-ee}は政策変化の容態を描き出す上で非常に有益な枠組みを提示した。\citet*{Baumgartner2010-rl}は政策が強い固着性を持ち、一定期間の安定性と突然の急激な変化によって特徴づけられることを指摘した。こうした現象が生じるメカニズムとして、安定性を持った政策領域に新しい対立の観点がもたらされ、それが政治空間全体に広がることによって急激で大規模な変化が生じると論じた。\citep*{Baumgartner2010-rl}このような過程として政策変化を論じる見方は断続均衡理論として知られ、政策変化に対する重要な見方として位置付けられている。\citep*{Howlett2009-tn,John2018-im}\\
 　しかしながら、断続均衡理論は「なぜ政策は変化するのか」に対する回答を提示するものの、「特定のタイミングで、なぜ特定の政策のみが重要な争点となり、変化をもたらすのか」という問題に対して十分な回答をもたらしたとは言えない。\citep*{John2018-im}この点をめぐり、さまざまな視座から検討がなされてきた。これらは大別すると、外性的要因による説明と内生的要因による説明とに分類することができる。外性的要因に着目する分析では、自然災害などの焦点となる要因によって特定の政策領域に注目が集まるとする議論\citep*{Birkland1997-lq,Birkland1998-xp}、外性的要因が政治的連合の変化\citep*{Sabatier1993-id}や有権者の関心の変化\citep*{Bertelli2013-zq}をもたらすことで特定の政策領域が注目されるとする議論などがある。内生的要因に着目する議論としては知識の更新によって政治的状況の変化を説明する議論\citep*{Baumgartner2010-rl}などが存在している。\\
 　このように、どの政策領域が注目を集めるのかという問題は、多くの理論的立場が存在するものの、経験的な知見は十分に蓄積されてきたとは言い難い。Comparative Agendas Projectはこれらの課題に対して、複数国の比較を可能とするデータセットを構築した点で重要な貢献であるが、このデータを用いて、特定の政策領域で注目が形成される要因についての分析は十分になされてきたとは言えない。\\
