--- a/writings/reference.bib
+++ b/writings/reference.bib
@@ -82,6 +82,33 @@
   language  = "en"
 }
 
+@ARTICLE{Ballard2021-su,
+  title     = "Minority Party Capacity in Congress",
+  author    = "Ballard, Andrew O and Curry, James M",
+  abstract  = "When, and under what circumstances, are congressional minority
+               parties capable of influencing legislative outcomes? We argue
+               that the capacity of the minority party to exert legislative
+               influence is a function of three factors: constraints on the
+               majority party, which create opportunities for the minority
+               party; minority party cohesion on the issue at hand; and
+               sufficient motivation for the minority to engage in legislating
+               rather than electioneering. Drawing on data on every bill
+               considered in the House of Representatives between 1985 and 2006
+               and case examples of notable lawmaking efforts during the same
+               period, we show that our theory helps predict which bills are
+               considered on the House floor, which bills become law, and the
+               substance of policy-making outcomes. Our findings have important
+               implications for theories of congressional party power and our
+               understanding of minority party influence on Capitol Hill.",
+  journal   = "Am. Polit. Sci. Rev.",
+  publisher = "Cambridge University Press",
+  volume    =  115,
+  number    =  4,
+  pages     = "1388--1405",
+  month     =  nov,
+  year      =  2021
+}
+
 @INCOLLECTION{Baumgartner2009-eb,
   title     = "Lobbying and policy change",
   booktitle = "Lobbying and Policy Change",
@@ -453,6 +480,59 @@
   year      =  2009
 }
 
+@ARTICLE{Hughes2021-cp,
+  title     = "Party messaging in the {U.S}. house of Representatives",
+  author    = "Hughes, Tyler and Koger, Gregory",
+  abstract  = "Both Congressional parties compete to promote their own
+               reputations while damaging the opposition party's brand. This
+               behavior affects both policy-making agendas and the party
+               members' communications with the media and constituents. While
+               there has been ample study of partisan influence on legislative
+               agenda-setting and roll call voting behavior, much less is known
+               about the parties' efforts to shape the public debate. This
+               paper analyzes two strategic decisions of parties: the timing of
+               collective efforts to influence the public policy debate and the
+               substantive content of these ``party messaging'' events. These
+               dynamics are analyzed using a unique dataset of 50,195
+               one-minute speeches delivered on the floor of the U.S. House of
+               Representatives from 1989 to 2016. We find a pattern of
+               strategic matching---both parties are more likely to engage in
+               concurrent messaging efforts, often on the same issue.",
+  journal   = "Polit. Res. Q.",
+  publisher = "SAGE Publications",
+  pages     = "106591292110297",
+  month     =  jul,
+  year      =  2021,
+  language  = "en"
+}
+
+@ARTICLE{Hughes2018-dj,
+  title     = "Assessing minority party influence on partisan issue attention
+               in the {US} House of representatives, 1989--2012",
+  author    = "Hughes, Tyler",
+  abstract  = "The majority party dominates legislative outputs and throughputs
+               in rule-driven institutions, but these agenda-setting powers may
+               not extend to other facets of the policy process. This article
+               assesses the minority party?s ability to influence majority
+               party issue attention in the US House of Representatives by
+               analyzing one-minute speeches given on the House floor. This new
+               measure of partisan issue attention highlights how the parties
+               focus on the same policy issues in the same relative
+               proportions, rather than crafting divergent issue agendas. Time
+               series analysis indicates gaps between the parties? level of
+               attention to particular issues result in corresponding changes
+               to majority party attention, which suggests the minority party
+               can influence majority party issue attention by placing more
+               emphasis on specific policy issues.",
+  journal   = "Party Politics",
+  publisher = "SAGE Publications Ltd",
+  volume    =  24,
+  number    =  2,
+  pages     = "197--208",
+  month     =  mar,
+  year      =  2018
+}
+
 @INCOLLECTION{John2018-im,
   title     = "Agenda formation and change",
   booktitle = "Handbook on Policy, Process and Governing",
@@ -532,6 +612,131 @@
   year      =  2010
 }
 
+@ARTICLE{Layman2006-tg,
+  title     = "{PARTY} {POLARIZATION} {IN} {AMERICAN} {POLITICS}:
+               Characteristics, Causes, and Consequences",
+  author    = "Layman, Geoffrey C and Carsey, Thomas M and Horowitz, Juliana
+               Menasce",
+  abstract  = "? Abstract?Recent commentary points to clear increases in
+               ideological polarization between the major American political
+               parties. We review the theoretical and empirical literature on
+               party polarization and partisan change. We begin by comparing
+               the current period both to earlier political eras and to
+               theories of partisan change. We argue that in the current period
+               the parties have grown increasingly divided on all the major
+               policy dimensions in American politics?a process that we term
+               conflict extension. We discuss various perspectives on increases
+               in polarization between the parties in government, the parties
+               in the electorate, and the parties' activists, and we consider
+               the causal links between polarization at each of these levels.
+               We consider whether American society itself, and not just the
+               parties and their identifiers, has become increasingly
+               polarized. Finally, we discuss the consequences of growing party
+               polarization for American political life.",
+  journal   = "Annu. Rev. Polit. Sci.",
+  publisher = "Annual Reviews",
+  volume    =  9,
+  number    =  1,
+  pages     = "83--110",
+  month     =  jun,
+  year      =  2006
+}
+
+@BOOK{Mayhew1974-jz,
+  title     = "Congress: The Electoral Connection",
+  author    = "Mayhew, David R",
+  abstract  = "The actions, processes, policies, and effectiveness of the
+               Congress are critically examined in light of the ongoing
+               political power struggle and the congressman's preoccupation
+               with reelection. Bibliogs.",
+  publisher = "Yale University Press",
+  year      =  1974,
+  language  = "en"
+}
+
+@BOOK{Mayhew2005-or,
+  title     = "Divided We Govern: Party Control, Lawmaking and Investigations,
+               1946-2002",
+  author    = "Mayhew, David R",
+  abstract  = "In this prize-winning book, a renowned political scientist
+               debunks the commonly held myth that the American national
+               government functions effectively only when one political party
+               controls the presidency and Congress. For this new edition,
+               David R. Mayhew has provided a new Preface, a new appendix, and
+               a new concluding chapter that brings the historical narrative up
+               to date. ``Important, accessible, and compelling, David Mayhew's
+               second edition of Divided We Govern takes the best book on the
+               history of US lawmaking and--against all odds--makes it
+               better.''--Keith Krehbiel, Stanford University ''In this welcome
+               updating of his agenda-setting classic, David Mayhew cogently
+               defends his original methodology and finds that divided
+               government remains no less productive of important legislation
+               than unified government, although it is now (thanks mainly to
+               Clinton's impeachment) strongly associated with prominent
+               investigations of the executive branch. Written with Mayhew's
+               usual clarity and grace, this is a book to be enjoyed by
+               beginning and veteran students of Congress alike.''--Gary
+               Jacobson From reviews of the first edition: ``First-rate. . . .
+               Mayhew's tabulations and analysis are, quite simply,
+               unimpeachable.''--Morris Fiorina, Washington Monthly``Will stand
+               for years as a classic.''--L. Sandy Maisel, Political Science
+               Quarterly``Should be read by every student of American
+               politics.''--Gillian Peele, Times Higher Education Supplement",
+  publisher = "Yale University Press",
+  month     =  jan,
+  year      =  2005,
+  language  = "en"
+}
+
+@BOOK{Peters2010-ve,
+  title     = "Speaker Nancy Pelosi and the New American Politics",
+  author    = "Peters, Jr, Ronald M and Rosenthal, Cindy Simon",
+  abstract  = "When the Democrats retook control of the U.S. House of
+               Representatives in January 2007 after twelve years in the
+               wilderness, Nancy Pelosi became the first woman speaker in
+               American history. In Speaker Nancy Pelosi and the New American
+               Politics, Ron Peters, one of America's leading scholars of
+               Congress, and Cindy Simon Rosenthal, one of America's leading
+               scholars on women and political leadership, provide a
+               comprehensive account of how Pelosi became speaker and what this
+               tells us about Congress in the twenty-first century. They
+               consider the key issues that Pelosi's rise presents for American
+               politics, highlight the core themes that have shaped, and
+               continue to shape, her remarkable caree, and discuss the
+               challenges that women face in the male-dominated world of
+               American politics, particularly at its highest levels. The
+               authors also shed light on Pelosi's political background: first
+               as the scion of a powerful Baltimore political family whose
+               power base lay in East Coast urban ethnic politics, and later as
+               a successful politician in what is probably the most liberal
+               city in the country, San Francisco. Peters and Rosenthal trace
+               how she built her base within the House Democratic Caucus and
+               ultimately consolidated enough power to win the Speakership.
+               They show how twelve years out of power allowed her to fashion a
+               new image for House Democrats, and they conclude with an
+               analysis of her institutional leadership style. The only
+               full-length portrait of Nancy Pelosi in print, this superb
+               volume offers a vivid and insightful analysis of one of
+               America's most remarkable politicians.",
+  publisher = "Oxford University Press",
+  month     =  apr,
+  year      =  2010,
+  language  = "en"
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@BOOK{Poole2017-ir,
+  title     = "Ideology \& congress: A political economic history of roll call
+               voting",
+  author    = "Poole, Keith T and Rosenthal, Howard",
+  abstract  = "… Although the continuum is an abstraction, it is convenient to
+               use the word ideology as a shorthand code for these positions.
+               Henceforth in this book, we use ideology as a shorthand in …",
+  publisher = "Routledge",
+  year      =  2017
+}
+
 % The entry below contains non-ASCII chars that could not be converted
 % to a LaTeX equivalent.
 @ARTICLE{Rawat2016-ew,
@@ -579,40 +784,19 @@
   year      =  2008
 }
 
-@BOOK{Peters2010-ve,
-  title     = "Speaker Nancy Pelosi and the New American Politics",
-  author    = "Peters, Jr, Ronald M and Rosenthal, Cindy Simon",
-  abstract  = "When the Democrats retook control of the U.S. House of
-               Representatives in January 2007 after twelve years in the
-               wilderness, Nancy Pelosi became the first woman speaker in
-               American history. In Speaker Nancy Pelosi and the New American
-               Politics, Ron Peters, one of America's leading scholars of
-               Congress, and Cindy Simon Rosenthal, one of America's leading
-               scholars on women and political leadership, provide a
-               comprehensive account of how Pelosi became speaker and what this
-               tells us about Congress in the twenty-first century. They
-               consider the key issues that Pelosi's rise presents for American
-               politics, highlight the core themes that have shaped, and
-               continue to shape, her remarkable caree, and discuss the
-               challenges that women face in the male-dominated world of
-               American politics, particularly at its highest levels. The
-               authors also shed light on Pelosi's political background: first
-               as the scion of a powerful Baltimore political family whose
-               power base lay in East Coast urban ethnic politics, and later as
-               a successful politician in what is probably the most liberal
-               city in the country, San Francisco. Peters and Rosenthal trace
-               how she built her base within the House Democratic Caucus and
-               ultimately consolidated enough power to win the Speakership.
-               They show how twelve years out of power allowed her to fashion a
-               new image for House Democrats, and they conclude with an
-               analysis of her institutional leadership style. The only
-               full-length portrait of Nancy Pelosi in print, this superb
-               volume offers a vivid and insightful analysis of one of
-               America's most remarkable politicians.",
-  publisher = "Oxford University Press",
-  month     =  apr,
-  year      =  2010,
-  language  = "en"
+@MISC{Schaeffer2019-ld,
+  title        = "Share of Americans who favor stricter gun laws has increased
+                  since 2017",
+  booktitle    = "Pew Research Center",
+  author       = "Schaeffer, Katherine",
+  abstract     = "Despite deep partisan divisions on the issue, there has been
+                  a modest rise in support for stricter gun laws in the United
+                  States since 2017.",
+  month        =  oct,
+  year         =  2019,
+  howpublished = "\url{https://www.pewresearch.org/fact-tank/2019/10/16/share-of-americans-who-favor-stricter-gun-laws-has-increased-since-2017/}",
+  note         = "Accessed: 2022-6-4",
+  language     = "en"
 }
 
 @BOOK{Sabatier1993-id,
@@ -658,4 +842,26 @@
   month     =  jul,
   year      =  2016,
   language  = "en"
+}
+
+%% 日本語文献
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@BOOK{2004-cr,
+  title     = "アメリカ連邦議会 : 世界最強議会の政策形成と政策実現",
+  author    = "廣瀬, 淳子",
+  abstract  = "本書が対象とするのは、教科書的議会以後の現在のアメリカ連邦議会である。アメリカ連邦議会が何故独自の政策形成が可能なのか、それを議会制度と活動実態の両面から明らかにすることが本書の第一の目的である。さらに、アメリカ連邦議会は１９７０年代以降何故これほど大きく変化したのか、その変化の詳細と原因を明らかにし、現在のアメリカ連邦議会の姿を伝えることが本書の第二の目的である。さらにそのようなアメリカ連邦議会をアメリカの政治研究者がどのように理解し、理論化しているかについても概観する。",
+  publisher = "公人社",
+  year      =  2004
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@BOOK{Tsebelis2009-hf,
+  title     = "拒否権プレイヤー",
+  author    = "ジョージ・ツェベリス",
+  abstract  = "拒否権プレイヤー ジョージ・ツェベリス著 ; 眞柄秀子, 井戸正伸監訳 早稲田大学出版部, 2009.3",
+  publisher = "早稲田大学出版部",
+  year      =  2009,
+  language  = "jpn"
 }
