--- a/writings/hoge.tex
+++ b/writings/hoge.tex
@@ -33,8 +33,13 @@
 \subsection{議員行動と政党の役割}
 　特に近年の議会における審議過程をめぐる議論は、議会内政党がいかなる役割を果たしているのかに着目して検討がなされてきた。中でも議会内政党の役割については手続き上多数党が優位に立っている点が注目され、議案審議過程を多数政党が統制しているとする理解が提示されてきた。\citep*{Cox2005-pn,Cox2007-xq}\\
 　これに対して、少数政党の役割を強調する議論が近年提示されている。\citep*{Hughes2018-dj,Hughes2021-cp,Ballard2021-su}\\
-　少数政党の議会審議における重要性を指摘する一連の研究は、議会で何が審議され、どのような法案が通過するかを説明する上で極めて重要な示唆を与えている。他方、議会内政党に注目する分析は、議会内部の権限配置や資源の多寡に焦点を据える傾向にあり、それ以外の要因を分析の視角に捉えきれていないといえる。特に議員が再選動機を持つアクターであり、議員は法案審議や点呼投票などの場面において自身のみで意思決定を行うことのできるアクターではないという点は重要である。
-
+　少数政党の議会審議における重要性を指摘する一連の研究は、議会で何が審議され、どのような法案が通過するかを説明する上で極めて重要な示唆を与えている。\\
+　他方で議会内政党に注目する分析は、議会内部の権限配置や資源の多寡に焦点を据える傾向にあり、それ以外の要因を分析の視角に捉えきれていないといえる。大別すると2つの問題点が指摘できる。第1には、議員行動を所与の選好に基礎付けられたものとして説明することは困難である。第2には、議員個人と議会指導部との戦略的な動機は必ずしも一致するとは言えない。\\
+　第1の点について、議員が議会で法案を審議・議決する際に、自らの選好にしたがって独立に法案への賛否や政党指導部への支持を決定しているとする前提は適切でない。このように議員の独立性を強調し、所与の選好をもって議員行動を説明する立場は、議員が選挙で選出され、選挙区民を有するアクターであるという側面を過小評価するものであると考えられる。\citet*{Fenno1977-se,Fenno2000-up}は選挙区における議員の行動を分析する中で、下院議員が選挙区民からの信頼を獲得するために取る方策には複数種類のアプローチが存在することを指摘している。そして、政策的立ち位置を重視するタイプの政治家が点呼投票などの形で表明した政策選好が選挙区民の利益につながるという説明を必要とするだけではなく、個人的なつながりや個人のパーソナリティを重視する議員においても、背いてはならない政策選好が存在することが指摘される。\citep*{Fenno2000-up}\\
+　このように有権者の反応を重視する議員の在り方は、所与の選好を有する議員という仮定と齟齬をきたしうる。議員における所与の選好と選挙区民の政策選好を重視する議員というモデルを整合させるためには、選挙区民の政策選好と議員への評価は議会期毎にしか更新されないという仮定が必要である。この仮定が妥当であるとすれば多くの議員が度々選挙区に足を運び、選挙区民と交流することや、議員が恒常的に自らの政策的立場や立法成果を広報などの形で選挙区民などの有権者に対して表明することを説明できない。議員が審判を受けるのが選挙のタイミングだけであるならば、そのような行為が必要になるのは選挙サイクルのタイミングだけである。\\
+　実際には、議員の行動はむしろ政策的立場を有権者との交流を通じて更新し続ける存在であると想定すべきだろう。
+　第2の点について、一般議員と政党指導部の間に生じる緊張関係を検討する必要があるだろう。例えば\citet*{Cox2005-pn,Cox2007-xq}は議会内政党の行動戦略を「多数政党の多数派が望まない法案の排除」として定式化しているが、この戦略は多数政党内の少数派議員の選好を犠牲にして、多数派の政策的利益を実現することを意味している。\citep*{}また、\citet*{Ballard2021-su}が論じるような党内の強制力と立法生産性への意欲といった説明変数は、なぜ政党内の強制力が成立するのかを全く説明しない。これらは与えられた法案に対して自明に生成されるのではなく、議員個人の選択の結果として生じる帰結であるに過ぎない。\\
+　実証的にみても、議員行動の集合としての立法活動は所与の選好にしたがった一般議員と議会指導部の関係や議会と大統領との政策選好における関係だけに還元できるものではなく、議会と世論やメディアなどの公共空間との関係から理解されるべきものである。\\
 
 　JonesとBaumgartnerによる一連の分析\citep*{Baumgartner2010-rl, Baumgartner2009-eb,Baumgartner2020-ee}は政策変化の容態を描き出す上で非常に有益な枠組みを提示した。\citet*{Baumgartner2010-rl}は政策が強い固着性を持ち、一定期間の安定性と突然の急激な変化によって特徴づけられることを指摘した。こうした現象が生じるメカニズムとして、安定性を持った政策領域に新しい対立の観点がもたらされ、それが政治空間全体に広がることによって急激で大規模な変化が生じると論じた。\citep*{Baumgartner2010-rl}このような過程として政策変化を論じる見方は断続均衡理論として知られ、政策変化に対する重要な見方として位置付けられている。\citep*{Howlett2009-tn,John2018-im}\\
 　しかしながら、断続均衡理論は「なぜ政策は変化するのか」に対する回答を提示するものの、「特定のタイミングで、なぜ特定の政策のみが重要な争点となり、変化をもたらすのか」という問題に対して十分な回答をもたらしたとは言えない。\citep*{John2018-im}この点をめぐり、さまざまな視座から検討がなされてきた。これらは大別すると、外性的要因による説明と内生的要因による説明とに分類することができる。外性的要因に着目する分析では、自然災害などの焦点となる要因によって特定の政策領域に注目が集まるとする議論\citep*{Birkland1997-lq,Birkland1998-xp}、外性的要因が政治的連合の変化\citep*{Sabatier1993-id}や有権者の関心の変化\citep*{Bertelli2013-zq}をもたらすことで特定の政策領域が注目されるとする議論などがある。内生的要因に着目する議論としては知識の更新によって政治的状況の変化を説明する議論\citep*{Baumgartner2010-rl}などが存在している。\\
