--- a/writings/reference.bib
+++ b/writings/reference.bib
@@ -437,6 +437,52 @@
   year      =  2019
 }
 
+@BOOK{Fenno2000-up,
+  title     = "Congress at the Grassroots: Representational Change in the
+               South, 1970-1998",
+  author    = "Fenno, Richard F",
+  abstract  = "However much politicians are demeaned and denounced in modern
+               American society, our democracy could not work without them. For
+               this reason, says Richard Fenno, their activities warrant our
+               attention. In his pioneering book, Home Style, Fenno demons",
+  publisher = "Univ of North Carolina Press",
+  chapter   = "2-4",
+  year      =  2000,
+  language  = "en"
+}
+
+@ARTICLE{Fenno1977-se,
+  title     = "{U.S}. house members in their constituencies: An exploration",
+  author    = "Fenno, Jr, Richard F",
+  abstract  = "The paper addresses itself to two questions left underdeveloped
+               in the literature on representative-constituent relations.
+               First, what does the representative see when he or she sees a
+               constituency? Second, what consequences do these perceptions
+               have for his or her behavior? The paper reverses the normal
+               Washington-oriented view of representative-constituent relations
+               and approaches both questions by examining the representative in
+               his or her constituency. The paper's observations are drawn from
+               the author's travels with seventeen U.S. House members while
+               they were working in their districts. Member perceptions of
+               their constituency are divided into the geographical, the
+               reelection, the primary and the personal constituencies.
+               Attention is then given to the home style of House members. Home
+               style is treated as an amalgam of three elements -- allocation
+               of resources, presentation of self, explanation of Washington
+               activity. An effort is made to relate home style to the various
+               perceived constituencies. Some observations are made relating
+               constituency-oriented research to the existing literature on
+               representation.",
+  journal   = "Am. Polit. Sci. Rev.",
+  publisher = "Cambridge University Press (CUP)",
+  volume    =  71,
+  number    =  3,
+  pages     = "883--917",
+  month     =  sep,
+  year      =  1977,
+  language  = "en"
+}
+
 @ARTICLE{Gray2019-sv,
   title     = "Pivotal Politics and the ideological content of Landmark Laws",
   author    = "Gray, T R and Jenkins, J A",
@@ -760,6 +806,34 @@
   month     =  aug,
   year      =  2016,
   language  = "en"
+}
+
+@ARTICLE{Richman2015-xo,
+  title     = "The electoral costs of party agenda setting: Why the Hastert
+               rule leads to defeat",
+  author    = "Richman, J",
+  abstract  = "This study demonstrates that unconditional blocking of bills
+               opposed by a majority of the majority party-as implied by the
+               party cartel model and advocated by former Speaker Dennis
+               Hastert-can produce conditions in which the majority party loses
+               popular support and loses elections. The theoretical analysis
+               and empirical results imply that the use of negative agenda
+               power to block bills is circumscribed by this risk of electoral
+               defeat. As a result, the opportunity for effective negative
+               agenda control is conditional on majority party issue advantage,
+               party polarization, and the distribution of status quo
+               locations. In particular, majority party roll rates should
+               sometimes be nonzero, blocking increases the odds of majority
+               party defeat in House of Representatives elections, and policy
+               change is most likely on issues with status quo that the model
+               suggests are the riskiest to block. \copyright{} 2015 Southern
+               Political Science Association.",
+  journal   = "J. Polit.",
+  publisher = "University of Chicago Press",
+  volume    =  77,
+  number    =  4,
+  pages     = "1129--1141",
+  year      =  2015
 }
 
 @BOOK{Rohde1991-da,
